# University-Projects

./: .gitignore  README.md
Semester1/Computational Logic/Lectures/: Lecture6_Semantic_Tableaux_Method_2021-2022.pptx  Lecture7_Resolution_proposition_2021-2022.pptx  Lecture8_Resolution_predicate_2021-2022.pptx  Lectures 13&14_Logic_circuits_2021-2022.pptx
Semester1/Computational Logic/MyPresentations/: Turcu_Ciprian_5.7_predicate_logic.pptx  Turcu_Ciprian_Boolean_Functions_4.7_4.8.pptx
Semester2/Data Structures and Algorithms/Labs/Lab1/: CMakeLists.txt  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp
Semester2/Data Structures and Algorithms/Labs/Lab2/: CMakeLists.txt  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Semester2/Data Structures and Algorithms/Labs/Lab3/: App.cpp  CMakeLists.txt  DynamicVector.h  ExtendedTest.cpp  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  ShortTest.cpp
Semester3/Databases/: README.md
Semester4/Systems for Design and Implementation/: .gitignore  README.md
Semester5/Computer Vision and Deep Learning/: .gitignore  Computer_Vision_and_Deep_Learning_Laboratory_1.ipynb  Computer_Vision_and_Deep_Learning_Laboratory_3_torch_2023_[students].ipynb  Copy_of_Computer_Vision_and_Deep_Learning_Laboratory_2_pytorch[students].ipynb  Laboratory_4_Semantic_segmentation_part_1_final_[students].ipynb
Semester6/AndroidThings/: README.md
Semester6/NumericalCalculus/: problem_solution.m
Semester6/SoftwareSystemsVerificationAndValidation/: .gitignore
(+981 files in other folders)
